--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -1,15 +1,15 @@
 <div ng-app='StudentTimer' ng-controller="Studentctrl">
-	<md-card>
-		<md-toolbar>
-		<h1> Student timer app</h1>
-		</md-toolbar>
-<ul>
-	<li><md-button ng-class="'md-primary md-raised'"
-ui-sref="studlogin" >Student Login screen</md-button></li>
-	<li><md-button ng-class="'md-primary md-raised'"
-ui-sref="teachlogin" >Teacher Login screen</md-button></li>
-	<li><md-button  ng-class="'md-primary md-raised'"
-ui-sref="signup" >Signup </md-button></li>
-</ul>
-	</md-card>
+	<md-toolbar>
+	<h1> Timed Student Login</h1>
+	</md-toolbar>
+	<div class="container">
+		<div>
+			<img class="home-pic" src="/public/images/timer_bomb.png"/>
+		</div>
+		<div class="vertical">
+			<md-button class="md-button md-primary md-raised" ui-sref="studlogin" >Student Login</md-button>
+			<md-button class="md-button md-primary md-raised" ui-sref="teachlogin" >Teacher Login</md-button>
+			<md-button class="md-button md-primary md-raised" ui-sref="signup" >Signup </md-button>
+		</div>
+	</div>
 </div>
