Update login portals and signup

--- a/public/partials/studlogin.html
+++ b/public/partials/studlogin.html
@@ -1,5 +1,4 @@
 <div ng-app='StudentTimer' ng-controller="Studentctrl">
-
 	<md-toolbar>
 		<h1>Student Login</h1>
 	</md-toolbar>
@@ -10,7 +9,7 @@
 				<md-input-container class="md-block">
 					<md-icon class="material-icons">account_circle</md-icon>
 					<label>Student ID</label>
-					<input class="login" ng-required="1" type="number" ng-model="studentId" pattern="^[0-9]{7}$">
+					<input class="login" ng-required="1" type="number" ng-model="id" pattern="^[0-9]{7}$">
 					</input>
 				</md-input-container>
 
