--- a/public/partials/teachlogin.html
+++ b/public/partials/teachlogin.html
@@ -9,7 +9,7 @@
 				<md-input-container class="md-block">
 					<md-icon class="material-icons">account_circle</md-icon>
 					<label>Teacher ID</label>
-					<input class="login" ng-required="1" type="number" ng-model="studentId" pattern="^[0-9]{7}$">
+					<input class="login" ng-required="1" type="number" ng-model="id" pattern="^[0-9]{7}$">
 					</input>
 				</md-input-container>
 
