--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,6 +39,7 @@ input.login {
 	display: flex;
 	justify-content: center;
 	padding: 40px;
+	text-align: center;
 }
 
 .vertical {
@@ -48,4 +49,10 @@ input.login {
 
 .home-pic {
 	margin-right: 100px;
+}
+
+.reminder {
+	color: gray;
+	font-size: .9em;
+	margin: 10px;
 }
