--- a/public/partials/studentsuccess.html
+++ b/public/partials/studentsuccess.html
@@ -11,7 +11,7 @@ Logout</span></p></md-button>
 
 		{{randomQuote}}
 		<div id="randompic">
-			<img ng-src="{{randomPic}}" />
+			<img ng-src="{{randomPic}}" align = "middle"/>
 		</div>
 
 	<h3>{{randomQuote}}</h3>
