--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,7 +23,8 @@ h1 {
 }
 
 input.login {
-	margin-right: 40px;
+	width: 200px;
+	margin: 10px;
 }
 
 .md-button {
@@ -35,11 +36,18 @@ input.login {
 	margin: 20px;
 }
 
+md-icon {
+	font-size: 1.8em !important;
+}
+
+.md-block > input, label {
+	margin-left: 20px;
+}
+
 .container {
 	display: flex;
 	justify-content: center;
 	padding: 40px;
-	text-align: center;
 }
 
 .vertical {
@@ -57,6 +65,7 @@ input.login {
 	color: gray;
 	font-size: .9em;
 	margin: 10px;
+	text-align: center;
 }
 
 /*
