Adding partially done modal script. Added memes.

--- a/public/partials/studentsuccess.html
+++ b/public/partials/studentsuccess.html
@@ -9,10 +9,22 @@ Logout</span></p></md-button>
 
 		</md-toolbar>
 
-		{{randomQuote}}
-		<div id="randompic">
-			<img ng-src="{{randomPic}}" align = "middle"/>
+	<div class="container">
+		<div>
+			<img src={{randomPic}} align = "right"/>
+
+			<h1>An unordered HTML list</h1>
+
+			<ul>
+			  <li>    Application Layer</li>
+			  <li>    Link Layer</li>
+			  <li>    Network Layer</li>
+			</ul>
+
+
 		</div>
+
+	</div>
 
 	<h3>{{randomQuote}}</h3>
 
