Some minor changes

--- a/public/partials/studentsuccess.html
+++ b/public/partials/studentsuccess.html
@@ -11,14 +11,17 @@ Logout</span></p></md-button>
 
 	<div class="container">
 		<div>
-			<img src={{randomPic}} align = "right"/>
+			<img src={{randomPic}} width=900 height=700 align = "right"/>
 
-			<h1>An unordered HTML list</h1>
+			<h1><font size="+10"> Lesson Outline </font></h1>
 
 			<ul>
-			  <li>    Application Layer</li>
-			  <li>    Link Layer</li>
-			  <li>    Network Layer</li>
+			  <li><font size="+2"> - Application Layer</font></li>
+			  <li><font size="+2"> - Transport Layer</font></li>
+			  <li><font size="+2"> - Network Layer</font></li>
+			  <li><font size="+2"> - Link Layer</font></li>
+			  <li><font size="+2"> - Physical</font></li>
+			  <!--<li><font size="+6"> - Network Layer</font></li>-->
 			</ul>
 
 
