Restyle Teacher home

--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -159,9 +159,9 @@
 				</div>
 			</div>
 			<div class="vertical">
-				<md-button class="md-button md-primary md-raised" ui-sref="studlogin" >Student Login</md-button>
-				<md-button class="md-button md-primary md-raised" ui-sref="teachlogin" >Teacher Login</md-button>
-				<md-button class="md-button md-primary md-raised" ui-sref="signup" >Signup </md-button>
+				<md-button class="md-primary md-raised main" ui-sref="studlogin" >Student Login</md-button>
+				<md-button class="md-primary md-raised main" ui-sref="teachlogin" >Teacher Login</md-button>
+				<md-button class="md-primary md-raised main" ui-sref="signup" >Signup </md-button>
 			</div>
 		</div>
 	</div>
