--- a/public/partials/teachlogin.html
+++ b/public/partials/teachlogin.html
@@ -5,11 +5,10 @@
 	<div class="container">
 		<md-card class="login-card container">
 			<form name="Form">
-
 				<md-input-container class="md-block">
 					<md-icon class="material-icons">account_circle</md-icon>
 					<label>Teacher ID</label>
-					<input class="login" ng-required="1" type="number" ng-model="id" pattern="^[0-9]{7}$">
+					<input id="id_input" class="login" ng-required="1" type="number" ng-model="id" pattern="^[0-9]{7}$">
 					</input>
 				</md-input-container>
 
