--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,14 @@ input[type=number]::-webkit-outer-spin-button {
 	margin: 0; 
 }
 
+.countdown-container {
+	width: 70%;
+	position: absolute;
+	top: 150px;
+	right: 0;
+	margin-right: 60px;
+}
+
 .ClassyCountdown-days, .ClassyCountdown-hours, .ClassyCountdown-minutes {
 	display: none;
 	visibility: hidden;
@@ -22,12 +30,16 @@ h1 {
 	color: white;
 }
 
+h2 {
+	text-align: center;
+}
+
 input.login {
 	width: 200px;
 	margin: 10px;
 }
 
-.md-button {
+a.main {
 	padding: 10px 20px !important;
 	margin: 10px 10px !important;
 }
@@ -61,11 +73,23 @@ md-icon {
 	align-items: center;
 }
 
+.center {
+	justify-content: center;
+}
+
 .reminder {
 	color: gray;
 	font-size: .9em;
 	margin: 10px;
 	text-align: center;
+}
+
+.digit-block {
+	padding: 30px;
+	border: thick solid #2196F3;
+	border-radius: 10px;
+	margin: 10px;
+	font-size: 2em;
 }
 
 /*
@@ -87,4 +111,23 @@ Student
 .openBookIcon{
     top: 20%;
     right: 0;
+}
+
+/*
+Student table
+*/
+table, th , td {
+	border: 1px solid grey;
+	border-collapse: collapse;
+	padding: 10px;
+	width: 70vw;
+}
+th {
+	color: white;
+}
+table tr:nth-child(odd) {
+	background-color: #2196F3;
+}
+table tr:nth-child(even) {
+	background-color: #ffffff;
 }
