--- a/public/partials/studlogin.html
+++ b/public/partials/studlogin.html
@@ -9,7 +9,7 @@
 				<md-input-container class="md-block">
 					<md-icon class="material-icons">account_circle</md-icon>
 					<label>Student ID</label>
-					<input class="login" ng-required="1" type="number" ng-model="id" pattern="^[0-9]{7}$">
+					<input id="id_input" class="login" ng-required="1" type="number" ng-model="id" pattern="^[0-9]{7}$">
 					</input>
 				</md-input-container>
 
