Made some slight changes and added more images

--- a/public/partials/studentsuccess.html
+++ b/public/partials/studentsuccess.html
@@ -15,7 +15,7 @@
 				<div id="randompic">
 					<img ng-src="{{randomPic}}" />
 				</div>
-				<h3>{{randomQuote}}</h3>
+				<!--<h3>{{randomQuote}}</h3>-->
 			</div>
 		</md-card>
 	</div>
